<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/sobre"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/menuItemGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemAscendente"
            android:title="@string/ascendente" />
        <item
            android:id="@+id/menuItemDescendente"
            android:title="@string/descendente" />
    </group>
</menu>